--- a/gl-s10.yaml
+++ b/gl-s10.yaml
@@ -20,28 +20,28 @@ esp32:
     type: arduino
 
 # Configuration fo V2.3 hardware revision
+#ethernet:
+#  type: IP101
+#  mdc_pin: GPIO23
+#  mdio_pin: GPIO18
+#  clk_mode: GPIO17_OUT
+#  phy_addr: 1
+#  power_pin: GPIO5
+
+# Comment the above and use this instead for V1.0 revision of the hardware
 ethernet:
-  type: IP101
+  type: LAN8720
   mdc_pin: GPIO23
   mdio_pin: GPIO18
   clk_mode: GPIO17_OUT
   phy_addr: 1
-  power_pin: GPIO5
-
-# Comment the above and use this instead for V1.0 revision of the hardware
-# ethernet:
-#   type: LAN8720
-#   mdc_pin: GPIO23
-#   mdio_pin: GPIO18
-#   clk_mode: GPIO17_OUT
-#   phy_addr: 1
 
 api:
 logger:
 ota:
 
 dashboard_import:
-  package_import_url: github://esphome/bluetooth-proxies/gl-s10.yaml@main
+  package_import_url: github://Hector47/bluetooth-proxies/gl-s10.yaml@main
 
 esp32_ble_tracker:
   scan_parameters:
